Impl [General] Add secondary button style

--- a/src/igz_controls/components/action-panel/action-panel.less
+++ b/src/igz_controls/components/action-panel/action-panel.less
@@ -43,7 +43,7 @@
             width: 40px;
             z-index: 2;
 
-            &:last-child {
+            &:last-of-type {
                 margin-right: 0;
             }
 
