--- a/src/igz_controls/components/default-dropdown/default-dropdown.less
+++ b/src/igz_controls/components/default-dropdown/default-dropdown.less
@@ -93,6 +93,10 @@
             pointer-events: none;
             background-color: @default-dropdown-field-disabled-bg-color;
             opacity: 0.6;
+
+            .dropdown-arrow span.igz-icon-dropdown {
+                opacity: 0.4;
+            }
         }
 
         &.readonly {
