--- a/src/igz_controls/components/info-page/info-page-filters/info-page-filters.less
+++ b/src/igz_controls/components/info-page/info-page-filters/info-page-filters.less
@@ -332,9 +332,8 @@
         bottom: 0;
         width: 100%;
 
-        button {
-            margin-right: 5px;
-            padding: 8px 21px;
+        button:not(:first-child) {
+            margin-left: 5px;
         }
     }
 }
