--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -429,7 +429,7 @@
                         </ncl-key-value-input>
                     </div>
                 </div>
-                <div class="ncl-create-button create-ingress-button"
+                <div class="igz-create-button create-ingress-button"
                      data-ng-click="$ctrl.addNewIngress($event)">
                     <span class="igz-icon-add-round"></span>
                     {{ 'functions:CREATE_NEW_HOST' | i18next }}
@@ -465,7 +465,7 @@
                     </div>
                 </div>
 
-                <div class="ncl-create-button create-annotation-button"
+                <div class="igz-create-button create-annotation-button"
                      data-ng-click="$ctrl.addNewAnnotation($event)">
                     <span class="igz-icon-add-round"></span>
                     {{ 'functions:CREATE_NEW_ANNOTATION' | i18next }}
@@ -521,7 +521,7 @@
                     </div>
                 </div>
 
-                <div class="ncl-create-button create-event-header"
+                <div class="igz-create-button create-event-header"
                      data-ng-click="$ctrl.addNewEventHeader($event)">
                     <span class="igz-icon-add-round"></span>
                     {{ 'functions:CREATE_NEW_EVENT_HEADER' | i18next }}
@@ -555,7 +555,7 @@
                     </div>
                 </div>
 
-                <div class="ncl-create-button create-subscription-button"
+                <div class="igz-create-button create-subscription-button"
                      data-ng-click="$ctrl.addNewSubscription($event)">
                     <span class="igz-icon-add-round"></span>
                     {{ 'functions:CREATE_NEW_SUBSCRIPTION' | i18next }}
@@ -584,7 +584,7 @@
                     </div>
                 </div>
 
-                <div class="ncl-create-button create-topic-button"
+                <div class="igz-create-button create-topic-button"
                      data-ng-click="$ctrl.addNewTopic($event)">
                     <span class="igz-icon-add-round"></span>
                     {{ 'functions:CREATE_NEW_TOPIC' | i18next }}
@@ -613,7 +613,7 @@
                     </div>
                 </div>
 
-                <div class="ncl-create-button create-broker-button"
+                <div class="igz-create-button create-broker-button"
                      data-ng-click="$ctrl.addNewBroker($event)">
                     <span class="igz-icon-add-round"></span>
                     {{ 'functions:CREATE_NEW_BROKER' | i18next }}
