--- a/src/nuclio/common/screens/create-function/function-import/function-import.less
+++ b/src/nuclio/common/screens/create-function/function-import/function-import.less
@@ -34,15 +34,9 @@
             display: flex;
 
             .function-import-file-picker {
-                label {
-                    margin: 0;
-                }
-
                 .file-picker-wrapper {
-                    cursor: pointer;
-                    height: 36px;
-                    padding: 12px 21px;
-                    margin-left: unset;
+                    margin: 0;
+                    line-height: 34px;
 
                     .igz-icon-upload {
                         margin-right: 10px;
@@ -54,10 +48,6 @@
                     position: absolute;
                     z-index: -1;
                 }
-            }
-
-            .ncl-primary-button {
-                height: 36px;
             }
         }
     }
