--- a/src/igz_controls/components/pagination/pagination.component.tpl.html
+++ b/src/igz_controls/components/pagination/pagination.component.tpl.html
@@ -14,16 +14,17 @@
 
     <div class="jump-to-page" data-ng-form="jumpToPageForm" data-ng-if="$ctrl.pageData.total > 1">
 
-        <div class="to-page-prev igz-button-basic igz-icon-left"
+        <button class="to-page-prev igz-button-basic igz-icon-left"
              tabindex="0"
              data-uib-tooltip="{{$ctrl.page <= 0 ? '' : ('common:PREVIOUS_PAGE' | i18next)}}"
              data-tooltip-placement="top"
              data-ng-class="{'disabled' : $ctrl.page <= 0}"
              data-ng-click="$ctrl.page <= 0 || $ctrl.goToPrevPage()"
              data-ng-keydown="$ctrl.goToPrevPage($event)">
-        </div>
+        </button>
 
-        <igz-validating-input-field data-field-type="input"
+        <igz-validating-input-field data-ng-if="$ctrl.allowJumpToPage"
+                                    data-field-type="input"
                                     data-input-name="jumpToPage"
                                     data-input-value="$ctrl.page + 1"
                                     data-is-data-revert="true"
@@ -36,14 +37,18 @@
                                     class="jump-to-page-input">
         </igz-validating-input-field>
 
-        <div class="to-page-next igz-button-basic igz-icon-right"
+        <div class="page-number rows-title" data-ng-if="!$ctrl.allowJumpToPage">
+            {{$ctrl.page + 1}}
+        </div>
+
+        <button class="to-page-next igz-button-basic igz-icon-right"
              tabindex="0"
              data-uib-tooltip="{{$ctrl.pageData.total <= $ctrl.page + 1 ? '' : ('common:NEXT_PAGE' | i18next)}}"
              data-tooltip-placement="top"
              data-ng-class="{'disabled' : $ctrl.pageData.total <= $ctrl.page + 1}"
              data-ng-click="($ctrl.pageData.total <= $ctrl.page + 1) || $ctrl.goToNextPage()"
              data-ng-keydown="$ctrl.goToNextPage($event)">
-        </div>
+        </button>
 
         <div class="rows-title title">&nbsp;{{ 'common:OF_PAGES' | i18next:{pagesTotal: $ctrl.pageData.total} }}</div>
     </div>
