--- a/src/igz_controls/less/dialogs.less
+++ b/src/igz_controls/less/dialogs.less
@@ -62,6 +62,10 @@
             &.padding-top-15 {
                 padding-top: 15px;
             }
+
+            button:not(:first-child) {
+                margin-left: 8px;
+            }
         }
 
         .error-container {
