--- a/src/nuclio/common/less/buttons.less
+++ b/src/nuclio/common/less/buttons.less
@@ -1,82 +1,14 @@
 .ncl-primary-button {
-    color: @white;
-    font-size: 12px;
-    display: inline-block;
-    vertical-align: top;
-    position: relative;
-    font-weight: 500;
-    text-transform: uppercase;
-    padding: 8px 17px;
     margin-left: 9px;
-    height: 32px;
-    line-height: initial;
-    border-radius: 2px;
-    background-color: @orange;
-    border: solid 1px @orange;
-
-    &:hover {
-        background-color: @dark-orange;
-        border: solid 1px @dark-orange;
-    }
-
-    &.disabled {
-        background-color: @pale-grey;
-        border: solid 1px @pale-grey;
-        box-shadow: none;
-        cursor: default;
-    }
 }
 
 .ncl-secondary-button {
-    font-size: 12px;
-    font-weight: 500;
-    display: inline-block;
     vertical-align: top;
     position: relative;
-    color: @greyish-purple;
-    text-transform: uppercase;
-    line-height: initial;
-    height: 32px;
-    background-color: transparent;
-    border: none;
-    padding: 9px 17px;
-
-    &:hover {
-        .black(0.13);
-        box-shadow: 0 1px 3px 0 @color;
-        border: solid 1px @pale-grey;
-        border-radius: 2px;
-        background-color: @white;
-        padding: 8px 16px;
-    }
-
-    &:active {
-        .black(0.1);
-        box-shadow: inset 0 2px 3px 0 @color;
-        border: solid 1px @silver;
-        outline: none;
-        border-radius: 2px;
-        background-color: @white;
-        padding: 8px 16px;
-    }
-
-    &.disabled {
-        .duskThree(0.24);
-        box-shadow: none;
-        cursor: default;
-        background-color: @pale-grey-three;
-        border: solid 1px @pale-grey-three;
-        color: @color;
-
-        &:hover, &:active {
-            padding: 9px 17px;
-        }
-    }
 }
 
 .btn-close {
-    .duskThree(0.64);
-    color: @color;
+    color: .duskThree(0.64)[@color];
     right: 0;
     position: absolute;
     margin-top: 6px;
@@ -86,37 +18,13 @@
     z-index: 11;
 
     &:hover {
-        .duskThree(1);
-        color: @color;
+        color: .duskThree(1)[@color];
     }
 }
 
 .ncl-new-entity-button {
-    color: @white;
-    font-size: 13px;
     display: inline-block;
     vertical-align: top;
     position: relative;
-    font-weight: 500;
-    text-transform: uppercase;
-    letter-spacing: 0.8px;
-    padding: 10px 24px;
-    height: 36px;
-    line-height: initial;
-    border-radius: 2px;
-    border: none;
-    background-color: @dark-orange;
-    outline: none;
     margin-left: 15px;
-
-    &:hover {
-        background-color: @orange;
-    }
-
-    &.disabled {
-        background-color: @pale-grey;
-        border: solid 1px @pale-grey;
-        box-shadow: none;
-        cursor: default;
-    }
 }
