[API Gateways] Add creation/edit wizard

--- a/src/igz_controls/components/copy-to-clipboard/copy-to-clipboard.tpl.html
+++ b/src/igz_controls/components/copy-to-clipboard/copy-to-clipboard.tpl.html
@@ -1,7 +1,7 @@
 <div class="igz-action-item"
      data-ng-click="$ctrl.copyToClipboard()"
      data-uib-tooltip="{{ 'common:TOOLTIP.COPY_TO_CLIPBOARD' | i18next }}"
-     data-tooltip-placement="left"
+     data-tooltip-placement="{{ $ctrl.tooltipPlacement }}"
      data-tooltip-popup-delay="300"
      data-tooltip-append-to-body="true">
     <div class="action-icon ncl-icon-copy"></div>
