[Services] Presto: add Undo action after Reset To Default

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -695,6 +695,10 @@
     .generateIconClass(997);
 }
 
+.igz-icon-undo {
+    .generateIconClass(998);
+}
+
 .igz-icon-priority-realtime, .igz-icon-priority-high, .igz-icon-priority-standard, .igz-icon-priority-low {
     display: inline-block;
     font-size: 17px;
