--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -224,18 +224,19 @@
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.maxWorkers)">
                 <div class="field-label">{{ 'functions:MAX_WORKERS' | i18next }}</div>
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="input"
-                                            data-input-name="itemMaxWorkers"
-                                            data-input-value="$ctrl.item.maxWorkers"
-                                            data-is-focused="false"
-                                            data-form-object="$ctrl.editItemForm"
-                                            data-validation-pattern="$ctrl.numberValidationPattern"
-                                            data-validation-is-required="true"
-                                            data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_MAX_WORKERS' | i18next }}"
-                                            data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
-                                            data-update-data-field="maxWorkers">
-                </igz-validating-input-field>
+                <igz-number-input data-form-object="$ctrl.editItemForm"
+                                  data-input-name="{{$ctrl.selectedClass.maxWorkers.name}}"
+                                  data-current-value="$ctrl.item.maxWorkers"
+                                  data-update-number-input-callback="$ctrl.numberInputCallback(newData, field)"
+                                  data-update-number-input-field="maxWorkers"
+                                  data-placeholder="{{ 'functions:PLACEHOLDER.ENTER_MAX_WORKERS' | i18next }}"
+                                  data-decimal-number="0"
+                                  data-value-step="1"
+                                  data-validation-is-required="!$ctrl.selectedClass.maxWorkers.allowEmpty"
+                                  data-allow-empty-field="$ctrl.selectedClass.maxWorkers.allowEmpty"
+                                  data-min-value="$ctrl.selectedClass.maxWorkers.min"
+                                  data-max-value="$ctrl.selectedClass.maxWorkers.max">
+                </igz-number-input>
             </div>
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.workerAvailabilityTimeoutMilliseconds)">
@@ -250,7 +251,7 @@
                                   data-value-step="1"
                                   data-validation-is-required="!$ctrl.selectedClass.workerAvailabilityTimeoutMilliseconds.allowEmpty"
                                   data-allow-empty-field="$ctrl.selectedClass.workerAvailabilityTimeoutMilliseconds.allowEmpty"
-                                  data-min-value="0">
+                                  data-min-value="$ctrl.selectedClass.workerAvailabilityTimeoutMilliseconds.min">
                 </igz-number-input>
 
             </div>
