Impl [Nuclio] Triggers: Password: conceal characters

--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -328,7 +328,7 @@
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.password)">
                 <div class="field-label">{{ 'common:PASSWORD' | i18next }}</div>
                 <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="input"
+                                            data-field-type="password"
                                             data-input-name="password"
                                             data-input-value="$ctrl.item.password"
                                             data-is-focused="false"
