--- a/src/igz_controls/less/helpers.less
+++ b/src/igz_controls/less/helpers.less
@@ -209,6 +209,11 @@
         text-decoration: none;
         outline: none;
     }
+
+    &.disabled {
+        color: @link-disabled-color;
+        pointer-events: none;
+    }
 }
 
 .external-link-icon {
