[Nuclio] Triggers: Validate no more than one HTTP trigger

--- a/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
+++ b/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
@@ -19,8 +19,8 @@
             </div>
 
             <!-- Class/type -->
-            <div class="item-class" data-ng-if="!$ctrl.isNil($ctrl.item.ui.className)">
-                {{$ctrl.item.ui.className}}
+            <div class="item-class" data-ng-if="!$ctrl.isNil($ctrl.item.ui.selectedClass)">
+                {{$ctrl.item.ui.selectedClass.name}}
             </div>
             <div class="item-class" data-ng-if="!$ctrl.isNil($ctrl.item.volume.hostPath)">
                 {{ 'functions:HOST_PATH' | i18next }}
