Impl [Nuclio] Configuration: Image name: Add prefix + default

--- a/src/igz_controls/less/helpers.less
+++ b/src/igz_controls/less/helpers.less
@@ -44,6 +44,11 @@
     align-items: center;
 }
 
+.align-items-baseline {
+    display: flex;
+    align-items: baseline;
+}
+
 .justify-content-center {
     display: flex;
     justify-content: center;
