[Users] Info pane: Details: Tooltip misplaced

--- a/src/igz_controls/components/elastic-input-field/elastic-input-field.less
+++ b/src/igz_controls/components/elastic-input-field/elastic-input-field.less
@@ -1,6 +1,9 @@
 .igz-elastic-input-field {
     .elastic-input-field-color-set();
 
+    width: auto;
+    display: inline-block;
+
     .non-editable {
         padding: 7px 10px 0;
         letter-spacing: normal;
