--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -699,6 +699,10 @@
     .generateIconClass(998);
 }
 
+.igz-icon-monitoring {
+    .generateIconClass(999);
+}
+
 .igz-icon-priority-realtime, .igz-icon-priority-high, .igz-icon-priority-standard, .igz-icon-priority-low {
     display: inline-block;
     font-size: 17px;
