[Nuclio] Add validation rules to env vars and ingress hosts

--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -424,6 +424,7 @@
                                              data-additional-value-optional="true"
                                              data-submit-on-fly="true"
                                              data-item-index="$index"
+                                             data-validation-rules="$ctrl.validationRules['host']"
                                              data-action-handler-callback="$ctrl.handleIngressAction(actionType, index)"
                                              data-change-data-callback="$ctrl.onChangeData(newData, index)">
                         </ncl-key-value-input>
